# llm_playground

./: Makefile  README.md  pyproject.toml
data/text/: money_stuff_chunked.json
notebooks/: 00_test.ipynb  01_env_test.ipynb
notebooks/01_extract_text_from_image/huggingface/: 01_extract_text_from_image.ipynb
notebooks/01_extract_text_from_image/llama.cpp/: 01_using_llama_cpp_http_server.ipynb
notebooks/01_extract_text_from_image/nanonets/: 01_extract_text.ipynb
notebooks/02_chat/llama.cpp/: 01_qwen.ipynb
notebooks/03_embeddings/llama.cpp/: 01_test.ipynb
notebooks/04_text_chunking/gemini/: result.json
notebooks/04_text_chunking/llama.cpp/: 01_create_chunks_structured_output.ipynb  01_create_text_chunks.ipynb
notebooks/05_question_generation/llama.cpp/: 01_question_generation.ipynb
notebooks/05_rag_w_langchain/llama.cpp/: 01_embedding_test.ipynb  02_.ipynb
prompts/text_chunking/: gemini__no_examples.md
scripts/: download.sh
src/data_models/: data_models.py
src/utils/: pdf_to_images.py
