[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.69.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pillow>=10.1.0",
    "pydantic>=2.12.5",
    "torch>=2.1.0",
    "transformers>=4.57.6",
]
